[chore] fix respond modal window overflow

--- a/client/app/api-manager/components/steps/styles/stepPlugins.scss
+++ b/client/app/api-manager/components/steps/styles/stepPlugins.scss
@@ -1,4 +1,7 @@
-.plugin-menu-container {}
+.plugin-menu-container {
+    overflow: auto;
+    font-size: .8em;
+}
 
 .plugins-container {
     width: 80%;
